Closed
Bug 522311
Opened 16 years ago
Closed 16 years ago
"Assertion failure: f->getTreeInfo()->script != treeInfo->script"
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: dvander)
References
Details
(Keywords: assertion, regression, Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
|
1.16 KB,
patch
|
gal
:
review+
|
Details | Diff | Splinter Review |
I'm hitting this assertion a lot. I don't have a testcase. dvander looked and thinks the assertion is mostly bogus.
Assertion failure: f->getTreeInfo()->script != treeInfo->script, at /Users/jruderman/central/js/src/jstracer.cpp:9725
| Assignee | ||
Comment 1•16 years ago
|
||
This assertion doesn't really mean anything and should be removed.
Updated•16 years ago
|
Attachment #406294 -
Flags: review?(gal) → review+
| Assignee | ||
Comment 2•16 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Comment 3•16 years ago
|
||
I guess that this one can be closed?
| Assignee | ||
Comment 4•16 years ago
|
||
TraceMonkey bugs are closed when they land on mozilla-central.
Comment 5•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•