Removed bogus assert related to recursion (bug 522311, r=gal).